# samadhi_model

./: .gitignore  README.md  main.py  pyproject.toml
data/: test.py
docs/: logging.md  model.md  model_en.md  specification.md  specification_en.md  training_strategy.md  workflow_guide.md
docs/issue/: probe_collapse_issue.md
docs/refactoring/: refactoring_config.md  refactoring_module.md
docs/theory/: en.md  jp.md
samadhi/components/: README.md
samadhi/components/decoders/: conditional.py
samadhi/configs/: README.md  factory.py
samadhi/train/: README.md  __init__.py
satipatthana/configs/: README.md  vipassana.py
satipatthana/core/: engines.py  system.py
satipatthana/data/: void_dataset.py
satipatthana/train/: trainer.py
src/components/: vicara.py
src/configs/: README.md  adapters.py  base.py  decoders.py  factory.py  main.py  vicara.py  vitakka.py
src/core/: builder.py  engine.py
src/model/: conv_samadhi.py  lstm_samadhi.py  mlp_samadhi.py  samadhi.py  transformer_samadhi.py
src/presets/: sequence.py  tabular.py  vision.py
src/train/: README.md  __init__.py  anomaly_trainer.py  base_trainer.py  hf_trainer.py  supervised_trainer.py  trainer.py  unsupervised_trainer.py
src/utils/: logger.py  training.py
tests/: conftest.py
tests/configs/: test_base.py  test_components.py  test_factory.py  test_main.py
tests/core/: test_builder.py  test_engine.py  test_engines.py  test_system.py
tests/data/: test_void_dataset.py
tests/presets/: test_sequence.py  test_tabular.py  test_vision.py
tests/train/: test_hf_trainer.py  test_trainer.py
(+32 files in other folders)
